Atualizacao do readme

--- a/README
+++ b/README
@@ -1,3 +1,8 @@
-Estudar PHP nativo, HTML, CSS, Git, Github e Gitflow
+Estudar: 
 
--Desenvolvimento na branch develop
+-PHP nativo
+-HTML 
+-CSS
+-Git
+-Github
+-Gitflow
